# LOAN_DASH

./: .env  .env.template  .gitignore  .pre-commit-config.yml  AGED_ITEMS_FEATURE_SUMMARY.md  CHANGELOG.md  CHECKLIST.md  EXECUTIVE_DASHBOARD_REFERENCE.md  GOLD_SILVER_IMPORT_GUIDE.md  GOLD_SILVER_SETUP.md  GRANULAR_ANALYSIS_FEATURE.md  INTEREST_METRICS_CORRECTIONS.md  INTEREST_YIELD_ANALYSIS_PAGE_SUMMARY.md  MIGRATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION.md  QUICK_START.md  QUICK_START_TYPESCRIPT.md  README.md  README_FIX.md  README_TYPESCRIPT.md  REALIZED_INTEREST_FIX_REQUIRED.md  SETUP_INSTRUCTIONS.md  SMART_RECOMMENDATIONS_QUICKSTART.md  SMART_RECOMMENDATIONS_SUMMARY.md  SOLUTION_SUMMARY.md  TESTING_GUIDE.md  TEST_SUMMARY_GRANULAR_ANALYSIS.md  THEME_AND_CSV_INFO.md  TYPESCRIPT_FRONTEND_ISSUES.md  TYPESCRIPT_MIGRATION_SUMMARY.md  TYPESCRIPT_PAGES_MIGRATION.md  UTILS_IMPLEMENTATION_SUMMARY.md  UTILS_MIGRATION_GUIDE.md  WHATSAPP_CHAT_IMPORT_SUMMARY.md  YIELD_DENOMINATOR_FIX.md  YIELD_FIX_SUMMARY.md  YIELD_FORMULAS_BREAKDOWN.md  agents.md  analyze_yield_outliers.py  bulk_insert_accounts.py  (+27 more)
.streamlit/: config.toml
annual_data/: schema.sql
backend/: .env.example  package-lock.json  package.json  tsconfig.json
db/: gold_silver_rates_schema.sql  schema.sql
frontend/: next.config.ts  package-lock.json  package.json
pages/: 0_Executive_Dashboard.py  10_Interest_Yield_Analysis.py  10_Notes.py  11_Smart_Recommendations.py  12_Gold_Silver_Rates.py  1_Overview.py  2_Yearly_Breakdown.py  2_Yearly_Breakdown_MIGRATED.py  3_Client_Wise.py  4_Vyapari_Wise.py  6_Annual_Data.py  (+3 more)
(+34 files in other folders)
